2010-01-08 [paul]	0.26

	0.26 released

2010-01-08 [paul]	0.25.0cvs10

	* configure.ac
	* po/nl.po
		added by Marcel Pol
	* po/ca.po
	* po/cs.po
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/pt_BR.po
	* po/sk.po
		updated by Miquel Oliete, David Vachulka, Ricardo Mones Lastra,
		Tommi Pirinen, Pader Rezso, MSulchan Darmawan, kazken3,
		Frederico Goncalves Guimaraes, and Slavko

2010-01-05 [colin]	0.25.0cvs9

	* po/fr.po
		Update french translation

2009-10-31 [ticho]	0.25.0cvs8

	* src/feed.c
		Filter out certain frequently used html tags from subjects.

2009-10-29 [colin]	0.25.0cvs7

	* src/feed.c
		Parse items using full path. Fixes race conditions when
		cwd changes from another thread.

2009-10-28 [ticho]	0.25.0cvs6

	* src/feed.c
		During feed update, do not go over all comment feeds if
		Claws Mail is exiting, bail out immediately.

2009-10-28 [ticho]	0.25.0cvs5

	* src/feed.c
		Abort feed fetching as soon as possible if app is exiting.

2009-10-28 [colin]	0.25.0cvs4

	* src/strreplace.c
		Use a walking pointer instead of using strncat

2009-10-27 [ticho]	0.25.0cvs3

	* src/feed.c
	* src/strreplace.c
	* src/strreplace.h
		Better stripping of unwanted whitespace (newline, tabs, ...)
		from text during feed parsing. Should fix duplicates in certain feeds.

2009-10-27 [ticho]	0.25.0cvs2

	* src/feed.c
	* src/feed.h
		If user exits application while a feed is being parsed, interrupt
		parsing and allow application to quit immediately. Note: feed download
		can not be interrupted like this.

2009-10-25 [ticho]	0.25.0cvs1

	* src/feed.c
	* src/feed.h
		Do not block UI while parsing a feed.

2008-07-03 [paul]	0.25

	0.25 released

2009-07-03 [paul]	0.24.0cvs6

	* configure.ac
	* po/id.po
		added by MSulchan Darmawan
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/ja.po
	* po/ru.po
		updated by Ricardo Mones, Tommi Pirinen, Colin Leroy,
		Pader Rezso, Andrea Spadaccini, kazken3, and
		Aleksei Miheev

2009-04-18 [colin]	0.24.0cvs5